@@ -120,7 +120,8 @@ public class MMTopicManager extends AbstractTopicManager implements TopicManager
             return;
         }
 
-        if (topics.contains(topic)) {
+        TopicStats stats = topics.getIfPresent(topic);
+        if (null != stats) {
             cb.operationFinished(ctx, addr);
             return;
         }
